require multiple credentials for selection
Signed-off-by: foss-contributor <282724952+foss-contributor@users.noreply.github.com>